--- a/www/css/styles-main.css
+++ b/www/css/styles-main.css
@@ -100,17 +100,56 @@ h4 {
     .b-content__lider-gaining {
       margin-bottom: 20px;
     }
+      .b-content__lider-previous h4 {
+        padding-left: 10px;
+        color: #FB9504;
+      }
+        .b-content__lider-previous h4:before {
+          margin-right: 10px;
+          font-family: 'FontAwesome';
+          font-size: 1em;
+          line-height: 1em;
+          content: '\f091';
+        }
       .item img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         border-radius: 4px;
       }
-
-      .b-content__lider-previous p{
-        margin-bottom: 20px;
+      .b-content__lider-vote {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        min-width: 80px;
+        padding: 0.3em 1em;
+        background-color: rgba(0,0,0,0.7);
+        border-radius: 0 5px 0 5px;
       }
-        .b-content__lider-previous p a,
+        .b-content__lider-vote span:before {
+
+        }
+        .b-content__lider-previous .b-content__lider-vote {
+          color: #FB9504;
+        }
+          .b-content__lider-previous .b-content__lider-vote span:before {
+            margin-right: 10px;
+            font-family: 'FontAwesome';
+            font-size: 1em;
+            line-height: 1em;
+            content: '\f091';
+          }
+        .b-content__lider-gaining .b-content__lider-vote {
+          color: #FFFFFF;
+        }
+          .b-content__lider-gaining .b-content__lider-vote span {
+            padding-left: 20px;
+            background-image: url('../img/icon-plus.svg');
+            background-size: 14px auto;
+            background-position: left center;
+            background-repeat: no-repeat;
+          }
+        .b-content__lider-previous a,
         .b-content__lider-gaining p a,
         .b-content__popular p a {
           color: #1C5BC9;
@@ -128,7 +167,6 @@ h4 {
         max-width: -webkit-calc(33.33337% - 20px);
         max-width: calc(33.33337% - 20px);
       }
-      .b-content__lider-gaining p,
       .b-content__popular p {
         margin-bottom: 5px;
       }
@@ -184,7 +222,6 @@ h4 {
   .b-news__inner {
   }
   .b-news__container {
-    padding-top: 10px;
     clear: both;
   }
     
