--- a/www/css/styles-my-page.css
+++ b/www/css/styles-my-page.css
@@ -42,11 +42,13 @@
     .b-title__content-list {
       display: -ms-flexbox;
       display: -webkit-flex;
+      display: -webkit-box;
       display: flex;
     }
       .b-title__content-list li {
         -ms-flex: 1;
         -webkit-flex: 1;
+        -webkit-box-flex: 1;
         flex: 1;
         position: relative;
         height: 55px;
@@ -96,9 +98,11 @@
     .b-property-string {
       display: -webkit-flex;
       display: -ms-flexbox;
+      display: -webkit-box;
       display: flex;
       -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
+      -webkit-box-pack: justify;
       justify-content: space-between;
       margin-top: 10px;
       border-bottom: 1px solid rgba(163, 163, 163, 0.4);
@@ -148,6 +152,7 @@
     .b-logbook__container-item {
       display: -webkit-flex;
       display: -ms-flexbox;
+      display: -webkit-box;
       display: flex;
       width: 100%;
       padding: 20px;
@@ -158,15 +163,19 @@
         margin-bottom: 20px;
       }
       .b-logbook__container-item .b-logbook__container-item-img {
-        -webkit-flex: 0 0 calc(33.3333337% - 20px);
+        -webkit-flex: 0 0 -webkit-calc(33.3333337% - 20px);
         -ms-flex: 0 0 calc(33.3333337% - 20px);
+        -webkit-box-flex: 0;
         flex: 0 0 calc(33.3333337% - 20px);
+        max-width: -webkit-calc(33.3333337% - 20px);
         max-width: calc(33.3333337% - 20px);
+        width: -webkit-calc(33.3333337% - 20px);
         width: calc(33.3333337% - 20px);
       }
       .b-logbook__container-item-text {
         -webkit-flex: 3 0 66.66667%;
         -ms-flex: 3 0 66.66667%;
+        -webkit-box-flex: 3;
         flex: 3 0 66.66667%;
         max-width: 66.66667%;
         margin-left: 20px;
@@ -174,9 +183,11 @@
         .b-logbook__container-title {
           display: -webkit-flex;
           display: -ms-flexbox;
+          display: -webkit-box;
           display: flex;
           -webkit-justify-content: space-between;
           -ms-flex-pack: justify;
+          -webkit-box-pack: justify;
           justify-content: space-between;
           margin-bottom: 20px;
         }
@@ -184,6 +195,7 @@
           color: #1C5BC9;
           -webkit-flex: 5;
           -ms-flex: 5;
+          -webkit-box-flex: 5;
           flex: 5;
         }
           .firefox .b-logbook__container-item-text h4[data-clamp] {
@@ -193,6 +205,7 @@
           min-width: 80px;
           -webkit-flex: 1;
           -ms-flex: 1;
+          -webkit-box-flex: 1;
           flex: 1;
           margin-left: 20px;
           text-align: right;
@@ -210,7 +223,11 @@
       cursor: pointer;
     }
 
-.l-about-auto {
+.b-about-auto,
+.b-property,
+.b-logbook,
+.b-comments {
+  margin-top: 20px;
 }
   .b-about-auto h3,
   .b-coment h3 {
