--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -872,13 +872,6 @@ label {
   .b-post__item-info {
     margin-bottom: 10px;
   }
-    .date {
-      color: #808080;
-      margin-right: 15px;
-    }
-    .author {
-        margin: 0 0 0 5px;
-      }
   .wrap-tags {
     white-space: nowrap;
     }
@@ -940,10 +933,68 @@ label {
     width: 100%;
     height: 40px;
     padding: 10px;
+    padding-right: 50px;
     background-color: #F4F6F9;
     border-radius: 5px;
   }
-
+    .b-rating-dislike-bar .rating-click {
+      display: inline-block;
+      height: 20px;
+      width: 20px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      cursor: pointer;
+      transition: transform 0.2s ease;
+    }
+      .b-rating-dislike-bar .rating-click:hover {
+        transform: scale(1.1);
+      }
+      .b-rating-dislike-bar .minus-rating {
+        background-image: url('../img/icon-minus-rating.svg');
+      }
+    .b-rating-dislike-bar .display-rating {
+      display: inline-block;
+      padding: 0 10px;
+      height: 20px;
+      font-size: 0.8rem;
+      line-height: 20px;
+      vertical-align: text-bottom;
+      color: #606B80;
+    }
+    .b-rating-dislike-bar .plus-rating {
+        background-image: url('../img/icon-plus-rating.svg');
+      }
+    .b-rating-dislike-bar .date {
+      margin-left: 20px;
+      font-size: 0.6rem;
+      vertical-align: text-bottom;
+      color: #808080;
+    }
+    .b-rating-dislike-bar .add {
+      margin-left: 15px;
+      font-size: 0.6rem;
+      vertical-align: text-bottom;
+      color: #808080;
+    }
+    .b-rating-dislike-bar .link {
+      margin-left: 10px;
+      font-size: 0.6rem;
+      margin-right: auto;
+      vertical-align: text-bottom;
+    }
+    .b-rating-dislike-bar .comments {
+      float: right;
+      font-size: 0.6rem;
+      line-height: 22px;
+      color: #1C5BC9;
+    }
+    .b-rating-dislike-bar .view {
+      float: right;
+      font-size: 0.6rem;
+      line-height: 22px;
+      margin-left: 40px;
+    }
   /* Сообщение о подтверждени отправки/опубликования */
       .b-message-confirm {
         position: absolute;
