--- a/www/css/comments.css
+++ b/www/css/comments.css
@@ -40,7 +40,7 @@
     }
       .b-comments-block {
         width: 100%;
-        margin-left: 20px;
+        margin-left: 10px;
         margin-right: 20px;
       }
         .b-comments-block-title {
@@ -48,11 +48,13 @@
           display: -webkit-flex;
           display: -ms-flexbox;
           display: flex;
-          -webkit-box-pack: justify;
-          -webkit-justify-content: space-between;
-          -ms-flex-pack: justify;
-          justify-content: space-between;
-          margin-bottom: 10px;
+          margin-bottom: 3px;
+        }
+        .b-comments-block-title .rating-stars {
+          margin: 0 15px;
+        }
+        .b-comments-block-title .data {
+          line-height: 1.9em;
         }
 /*       .b-comments-title {
         display: -webkit-flex;
