--- a/www/css/styles-one-ad.css
+++ b/www/css/styles-one-ad.css
@@ -16,15 +16,19 @@
 .b-one-ad__main-block {
   display: -webkit-flex;
   display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
+  -webkit-box-pack: justify;
   justify-content: space-between;
 }
   .b-one-ad__info {
-    -webkit-flex: 0 0 calc(25% - 20px);
+    -webkit-flex: 0 0 -webkit-calc(25% - 20px);
     -ms-flex: 0 0 calc(25% - 20px);
+    -webkit-box-flex: 0;
     flex: 0 0 calc(25% - 20px);
+    max-width: -webkit-calc(25% - 20px);
     max-width: calc(25% - 20px);
     margin-left: 20px;
   }
@@ -53,6 +57,7 @@
   .b-one-ad__viewport {
     -webkit-flex: 0 0 75%;
     -ms-flex: 0 0 75%;
+    -webkit-box-flex: 0;
     flex: 0 0 75%;
     max-width: 75%;
     background-color: #000000;
@@ -61,6 +66,7 @@
     .b-one-ad__img-block {
       display: -webkit-flex;
       display: -ms-flexbox;
+      display: -webkit-box;
       display: flex;
       -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
@@ -69,9 +75,11 @@
       margin-bottom: 20px;
     }
       .b-one-ad__img-item {
-        -webkit-flex: 0 0 calc(20% - 20px);
+        -webkit-flex: 0 0 -webkit-calc(20% - 20px);
         -ms-flex: 0 0 calc(20% - 20px);
+        -webkit-box-flex: 0;
         flex: 0 0 calc(20% - 20px);
+        min-width: -webkit-calc(20% - 10px);
         min-width: calc(20% - 10px);
         margin-right: 10px;
         margin-bottom: 10px;
@@ -97,11 +105,6 @@
       color: #333333;
     }
 
-  .b-contact p.text.subtext {
-    color: #ADADAD;
-    text-align: center;
-    margin: 5px 0 25px;
-  }
   .b-contact .text.bold {
     text-align: center;
     color: #0038A8;
@@ -111,18 +114,30 @@
   }
     .b-contact__saler img {
       display: block;
-      height: 120px;
-      width: 120px;
+      height: 140px;
+      width: 140px;
       margin: 0 auto;
       margin-bottom: 20px;
       border-radius: 50%;
       object-fit: cover;
     }
   .b-contact p.text.bold a {
+    font-size: 0.8rem;
     color: #0038A8;
+  }
+  .b-contact__saler-item {
+    clear: both;
+  }
+  .b-contact__saler-item span.text.bold {
+    float: left;
+    color: #333333;
+  }
+  .b-contact__saler-item span.text + a {
+    float: right;
   }
 .b-contact__saler-item {
     text-align: center;
+    overflow: auto;
   }
   .b-contact__saler-item a {
     text-align: center;
@@ -134,8 +149,8 @@
     text-align: center;
   }
   .b-contact__saler-item.email {
-    margin-top: 20px;
-    margin-bottom: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   .b-contact h5 {
     text-align: center;
@@ -145,23 +160,77 @@
   }
   .b-contact .button {
     width: 100%;
+    clear: both;
+    overflow: auto;
   }
   button + p.text {
     margin-top: 20px;
     cursor: pointer;
+    -webkit-transition: color 0.2s ease;
     transition: color 0.2s ease;
   }
   .b-contact__other-ad {
-
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .b-contact__other-ad-wrapp {
+    max-height: -webkit-calc(100vh - 158px);
+    max-height: calc(100vh - 158px);
+    overflow: hidden;
   }
   .b-contact__other-ad:after {
     content: '\00A0('attr(data-sum-ad)')';
   }
-    .b-contact__other-ad:hover {
-      color: #1C5BC9;
-    }
+.b-contact__other-ad-item {
+  margin-bottom: 10px;
+}
   .b-contact__other-ad-wrapp {
     margin-top: 20px;
-    height: 300px;
-    border: 3px solid;
+  }
+.b-one-ad__other {
+  margin-top: 20px;
+}
+  .b-one-ad__other h3 {
+    margin-bottom: 20px;
+  }
+  .b-ad__item.item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding-bottom: 20px;
+  }
+  .b-ad__item.item:not(:first-child) {
+    margin-top: 20px;
+  }
+  .b-ad__item.item:not(:last-child) {
+    border-bottom: 1px solid #CECECE;
+  }
+  .b-ad__item-img {
+    -webkit-box-flex: 2;
+    -webkit-flex: 2;
+    -ms-flex: 2;
+    flex: 2;
+  }
+  .b-ad__item-info {
+    -webkit-box-flex: 6;
+    -webkit-flex: 6;
+    -ms-flex: 6;
+    flex: 6;
+    margin-left: 20px;
+
+  }
+    .b-ad__item-info a {
+      font-size: 0.7rem;
+    }
+  .b-ad__item-price {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    text-align: center;
   }
