--- a/www/css/styles-one-company.css
+++ b/www/css/styles-one-company.css
@@ -202,8 +202,11 @@ h4 {
   }
     .b-similar__item {
       width: 100%;
-      margin-bottom: 20px;
+      padding-bottom: 10px;
     }
+      .b-similar__item:not(:last-child) {
+        border-bottom: 1px solid #cecece;
+      }
       .firefox .b-similar__item [data-clamp] {
         max-height: 4.8em;
       }
@@ -211,9 +214,7 @@ h4 {
         margin-bottom: 0;
       }
       .b-similar__item img {
-        width: 100%;
-        margin-bottom: 7px;
-        border-radius: 4px;
+        object-fit: contain;
       }
       .b-similar__item a {
         font-weight: bold;
@@ -223,4 +224,61 @@ h4 {
 
     .b-comment h3 {
       margin-bottom: 10px;
-    }}
+    }
+
+.b-comments__add-bottom {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+  .b-comments__company-rating {
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+    #rating-select {
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+    #message-rating {
+      color: #97A9C9;
+    }
+
+  #rating-select .star {
+    background-image: url('../img/icon-stars.svg');
+    background-position: right center;
+    background-repeat: no-repeat;
+    background-size: 66px 30px;
+    display: block;
+    width: 36px;
+    height: 30px;
+    line-height: 30px;
+    float: left;
+    cursor: pointer;
+    zoom: 1;
+}
+  #rating-select .star.tmp_fs {
+    background-position: 6px center;
+  }
+    #rating-select .fullStar.star {
+      background-position: 6px center;
+    }
+  #rating-select .star.tmp_es {
+    background-position: right center;
+  }
+  .b-comments__company-rating + button.button {
+    margin-top: 0;
+    display: inline-block;
+  }
+  }
