--- a/www/css/styles-add-ad.css
+++ b/www/css/styles-add-ad.css
@@ -33,6 +33,8 @@
   }
     .b-add-ad__form-add {
       display: -webkit-flex;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
       margin-top: 15px;
       padding-bottom: 30px;
@@ -40,6 +42,8 @@
     }
       .b-add-ad__form-add p {
         -webkit-flex: 1;
+        -webkit-box-flex: 1;
+        -ms-flex: 1;
         flex: 1;
         position: relative;
         text-align: center;
@@ -59,6 +63,7 @@
         border-right: 1px solid transparent;
         border-bottom: 1px solid transparent;
         -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
         transform: rotate(45deg);
       }
         .b-add-ad__form-add span {
@@ -67,6 +72,8 @@
           border-bottom: 1px dashed #1C5BC9;
           -webkit-transition: color 0.2s ease,
                               border-bottom 0.2s ease;
+          -webkit-transition: color 0.2s ease,
+                      border-bottom 0.2s ease;
           transition: color 0.2s ease,
                       border-bottom 0.2s ease;
         }
