--- a/www/css/styles-flea-market.css
+++ b/www/css/styles-flea-market.css
@@ -1,223 +1,16 @@
 .b-ad-block {
   
 }
-  .b-ad-block h3:after {
-    content: '\00A0('attr(data-sum)')';
+.b-ad-block .b-main-title {
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+  .b-ad-block h3 {
+    margin-bottom: 26px;
   }
-  .b-ad__item {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    -webkit-box-align: center;
-    align-items: center;
-    padding: 0 20px 20px;
-    min-width: -webkit-calc(100% - 20px);
-    min-width: calc(100% - 20px);
-    font-size: 0.7rem;
-  }
-  .b-ad__item:not(:last-child) {
-    border-bottom: 1px dotted rgba(163, 163, 163, 0.4);
-  }
-    .b-ad__item[data-top-item] {
-      position: relative;
-      padding: 20px;
-      border-radius: 10px;
-      border: 4px solid #FFCC5C;
+    .b-ad-block h3:after {
+      content: '\00A0('attr(data-sum)')';
     }
-      .b-ad__item[data-top-item]:after {
-        position: absolute;
-        top: -4px;
-        right: -4px;
-        padding: 6px 20px;
-        background-color: #FFCC5C;
-        border-radius:  0 10px 0 10px;
-        display: block;
-        content: 'TOP';
-        font-family : Open Sans;
-        font-weight : bold;
-        color : #333333;
-        font-size: 0.7rem;
-        z-index: 2;
-      }
-      .b-ad__item[data-top-item]:before {
-        position: absolute;
-        top: 1px;
-        right: 2px;
-        padding: 6px 20px;
-        border-radius:  0 10px 0 10px;
-        display: block;
-        content: 'TOP';
-        font-family : Open Sans;
-        font-weight : bold;
-        font-size: 0.7rem;
-        background-color: #FFFFFF;
-        z-index: 1;
-      }
-
-  .b-ad__item-img {
-    -webkit-flex: 1 0 25%;
-    -ms-flex: 1 0 25%;
-    -webkit-box-flex: 1;
-    flex: 1 0 25%;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    max-width: 25%;
-    margin-right: 20px;
-  }
-   .b-ad__item-img figure {
-      margin: auto;
-     }
-  .b-ad__item-info {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    height: 100%;
-    -webkit-flex: 1 0 45%;
-    -ms-flex: 1 0 45%;
-    -webkit-box-flex: 1;
-    flex: 1 0 45%;
-    min-width: 45%;
-    padding: 10px 20px 10px 0;
-    margin-right: 10px;
-    border-right: 1px solid  rgba(163, 163, 163, 0.2);
-  }
-    .b-ad__item-info-top h5 {
-      margin-bottom: 10px;
-      font-size: 0.7rem;
-    }
-      .firefox .b-ad__item-info-top h5[data-clamp] {
-          max-height: 2.65em;
-      }
-    .b-ad__item-info-bottom {
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: -webkit-box;
-      display: flex;
-      -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-      -webkit-box-pack: justify;
-      justify-content: space-between;
-      -webkit-align-items: center;
-      -ms-flex-align: center;
-      -webkit-box-align: center;
-      align-items: center;
-      margin-top: 10px;
-    }
-    .wrap-tags {
-      -webkit-flex: 1 0 70%;
-      -ms-flex: 1 70%;
-      -webkit-box-flex: 1;
-      flex: 1 0 70%;
-      max-width: 300px;
-    }
-      @media (max-width: 1180px) {
-        .wrap-tags {
-          max-width: 260px;
-        }
-      }
-      @media (max-width: 1000px) {
-        .wrap-tags {
-          max-width: 200px;
-        }
-      }
-    .wrap-tags + p {
-      -webkit-flex: 1 0 30%;
-      -ms-flex: 1 30%;
-      -webkit-box-flex: 1;
-      flex: 1 0 230%;
-      max-width: 30%;
-    }
-  .b-ad__item-price {
-    -webkit-flex: 1 0 11%;
-    -ms-flex: 1 0 11%;
-    -webkit-box-flex: 1;
-    flex: 1 0 11%;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    max-width: 11%;
-    height: 100%;
-    font-weight: bold;
-    font-size: 1rem;
-    text-align: right;
-/*     margin-right: 20px;
-    padding-right: 10px;
-    border-right: 1px solid  rgba(163, 163, 163, 0.2); */
-  }
-    .b-ad__item-price span {
-      margin: auto 0;
-    }
-/*     .b-ad__item-fav {
-      position: relative;
-      -webkit-flex: 1 0 2.2rem;
-      -ms-flex: 1 0 2.2rem;
-      flex: 1 0 2.2rem;
-      max-width: 2.2rem;
-      height: 2.2rem;
-      background-color: #FFFFFF;
-      cursor: pointer;
-    }
-      .b-ad__item-fav:before {
-        position: absolute;
-        top: 0.9em;
-        right: 0;
-        left: 0;
-        text-align: center;
-        margin-top: -1rem;
-        font-family: 'FontAwesome';
-        font-size: 1.5rem;
-        vertical-align: middle;
-        color: #D2D2D2;
-        content: '\f005';
-      }
-    .b-ad__item-fav:after {
-      position: absolute;
-      bottom: -1.5rem;
-      left: -2.5rem;
-      content: attr(data-message);
-      display: block;
-      white-space: nowrap;
-      font-family: 'Open Sans', sans-serif;
-      -webkit-font-smoothing: subpixel-antialiased;
-      font-size: 0.6rem;
-      padding: 3px 5px;
-      opacity: 0;
-      pointer-events: none;
-      color: #333333;
-      background-color: #FFFFFF;
-      border-radius: 0.2rem;
-      box-shadow: 0px 0px 2px rgba(0,0,0,0.2);
-      transition: opacity 0.2s ease;
-    }
-    .show-text-favorite.b-ad__item-fav:after {
-      opacity: 1;
-      pointer-events: auto;
-    }
-        .add-to-favorite.b-ad__item-fav:before,
-        .b-ad__item-fav:hover:before {
-          color: #EDB867;
-        } */
-
 
 .b-add-ad {
   margin-bottom: 20px;
@@ -252,6 +45,10 @@
       margin-top: 20px;
       margin-bottom: 20px;
     }
+  .b-filter__form + p {
+    margin-top: 20px;
+    text-align: center;
+  }
 
 @media (max-width: 1000px) {
   .add-button.button.middle {
