--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -112,6 +112,7 @@ figure {
     right: 0;
     height: 100%;
     width: 100%;
+    border-radius: 4px;
     object-fit: cover;
   }
 
@@ -183,17 +184,18 @@ input.button {
     height : 32px;
     font-size : 0.6rem;
     line-height: 32px;
+    padding: 0 10px;
     border-radius : 16px;
   }
   .button.middle {
-    min-width : 111px;
+    padding: 0 20px;
     height : 40px;
     line-height: 100%;
     font-size : 0.7rem;
     border-radius : 20px;
   }
   .button.big {
-    min-width : 152px;
+    padding: 0 25px;
     height : 52px;
     font-size : 1rem;
     border-radius : 26px;
@@ -243,9 +245,6 @@ input.button {
   /* Отправить */
   .submit-button.button
     {
-    padding: 2px 25px;
-    width: auto;
-    min-width: 200px;
     background-color: #ABE766;
     color: #187900;
   }
@@ -471,7 +470,7 @@ label {
       }
   .b-menu__wrapp-login.text.bold {
     margin-right: 10px;
-    padding-left: 20px;
+    padding-left: 30px;
     color: #187900;
     font-size: 0.7rem;
     background-image: url('../img/icon-login.svg');
@@ -817,7 +816,7 @@ label {
         margin-top: -150px;
         padding: 20px;
         width: 595px;
-        height: 265px;
+        height: 251px;
         background-color: #FFFFFF;
         border-radius: 4px;
         -webkit-box-shadow: 0px 0px 5px rgba(130, 130, 130, 0.2);
@@ -829,6 +828,7 @@ label {
       margin-top: 20px;
     }
       .message-popup__form input[type='submit']{
+        margin-left: auto;
         margin-top: 20px;
       }
 
@@ -867,6 +867,220 @@ label {
       background-size: contain;
       background-repeat: no-repeat;
     }
+
+  /* Блок одного обьявления */
+  .b-ad__item {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    -webkit-box-align: center;
+    align-items: center;
+    padding: 0 20px 20px;
+    min-width: -webkit-calc(100% - 20px);
+    min-width: calc(100% - 20px);
+    font-size: 0.7rem;
+  }
+  .b-ad__item:not(:last-child) {
+    border-bottom: 1px dotted rgba(163, 163, 163, 0.4);
+  }
+    .b-ad__item[data-top-item] {
+      position: relative;
+      padding: 20px;
+      border-radius: 10px;
+      border: 4px solid #FFCC5C;
+    }
+      .b-ad__item[data-top-item]:after {
+        position: absolute;
+        top: -4px;
+        right: -4px;
+        padding: 6px 20px;
+        background-color: #FFCC5C;
+        border-radius:  0 10px 0 10px;
+        display: block;
+        content: 'TOP';
+        font-family : Open Sans;
+        font-weight : bold;
+        color : #333333;
+        font-size: 0.7rem;
+        z-index: 2;
+      }
+      .b-ad__item[data-top-item]:before {
+        position: absolute;
+        top: 1px;
+        right: 2px;
+        padding: 6px 20px;
+        border-radius:  0 10px 0 10px;
+        display: block;
+        content: 'TOP';
+        font-family : Open Sans;
+        font-weight : bold;
+        font-size: 0.7rem;
+        background-color: #FFFFFF;
+        z-index: 1;
+    }
+  .b-ad__item-img {
+    -webkit-flex: 1 0 25%;
+    -ms-flex: 1 0 25%;
+    -webkit-box-flex: 1;
+    flex: 1 0 25%;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    max-width: 25%;
+    margin-right: 20px;
+  }
+   .b-ad__item-img figure {
+      margin: auto;
+     }
+  .b-ad__item-info {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    height: 100%;
+    -webkit-flex: 1 0 45%;
+    -ms-flex: 1 0 45%;
+    -webkit-box-flex: 1;
+    flex: 1 0 45%;
+    min-width: 45%;
+    padding: 10px 20px 10px 0;
+    margin-right: 10px;
+    border-right: 1px solid  rgba(163, 163, 163, 0.2);
+  }
+    .b-ad__item-info-top h5 {
+      margin-bottom: 10px;
+      font-size: 0.7rem;
+    }
+      .firefox .b-ad__item-info-top h5[data-clamp] {
+          max-height: 2.65em;
+      }
+    .b-ad__item-info-bottom {
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: -webkit-box;
+      display: flex;
+      -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+      -webkit-box-pack: justify;
+      justify-content: space-between;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      -webkit-box-align: center;
+      align-items: center;
+      margin-top: 10px;
+    }
+    .wrap-tags {
+      -webkit-flex: 1 0 70%;
+      -ms-flex: 1 70%;
+      -webkit-box-flex: 1;
+      flex: 1 0 70%;
+      max-width: 300px;
+    }
+      @media (max-width: 1180px) {
+        .wrap-tags {
+          max-width: 260px;
+        }
+      }
+      @media (max-width: 1000px) {
+        .wrap-tags {
+          max-width: 200px;
+        }
+      }
+    .wrap-tags + p {
+      -webkit-flex: 1 0 30%;
+      -ms-flex: 1 30%;
+      -webkit-box-flex: 1;
+      flex: 1 0 230%;
+      max-width: 30%;
+    }
+  .b-ad__item-price {
+    -webkit-flex: 1 0 11%;
+    -ms-flex: 1 0 11%;
+    -webkit-box-flex: 1;
+    flex: 1 0 11%;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    max-width: 11%;
+    height: 100%;
+    font-weight: bold;
+    font-size: 1rem;
+    text-align: right;
+/*     margin-right: 20px;
+    padding-right: 10px;
+    border-right: 1px solid  rgba(163, 163, 163, 0.2); */
+  }
+    .b-ad__item-price span {
+      margin: auto 0;
+    }
+/*     .b-ad__item-fav {
+      position: relative;
+      -webkit-flex: 1 0 2.2rem;
+      -ms-flex: 1 0 2.2rem;
+      flex: 1 0 2.2rem;
+      max-width: 2.2rem;
+      height: 2.2rem;
+      background-color: #FFFFFF;
+      cursor: pointer;
+    }
+      .b-ad__item-fav:before {
+        position: absolute;
+        top: 0.9em;
+        right: 0;
+        left: 0;
+        text-align: center;
+        margin-top: -1rem;
+        font-family: 'FontAwesome';
+        font-size: 1.5rem;
+        vertical-align: middle;
+        color: #D2D2D2;
+        content: '\f005';
+      }
+    .b-ad__item-fav:after {
+      position: absolute;
+      bottom: -1.5rem;
+      left: -2.5rem;
+      content: attr(data-message);
+      display: block;
+      white-space: nowrap;
+      font-family: 'Open Sans', sans-serif;
+      -webkit-font-smoothing: subpixel-antialiased;
+      font-size: 0.6rem;
+      padding: 3px 5px;
+      opacity: 0;
+      pointer-events: none;
+      color: #333333;
+      background-color: #FFFFFF;
+      border-radius: 0.2rem;
+      box-shadow: 0px 0px 2px rgba(0,0,0,0.2);
+      transition: opacity 0.2s ease;
+    }
+    .show-text-favorite.b-ad__item-fav:after {
+      opacity: 1;
+      pointer-events: auto;
+    }
+        .add-to-favorite.b-ad__item-fav:before,
+        .b-ad__item-fav:hover:before {
+          color: #EDB867;
+        } */
 
 /* Информация о посте */
   .b-post__item-info {
@@ -931,9 +1145,7 @@ label {
   /* Панель плюслвания инфо о просмотрах и рейтинге */
   .b-rating-dislike-bar {
     width: 100%;
-    height: 40px;
     padding: 10px;
-    padding-right: 50px;
     background-color: #F4F6F9;
     border-radius: 5px;
   }
@@ -969,14 +1181,15 @@ label {
         content: '+';
       }
       .b-rating-dislike-bar .plus-rating:hover {
-        background-color: #556b2f;
+        background-color: #32cd32;
       }
+    .b-rating-dislike-bar span,
+    .b-rating-dislike-bar a {
+      line-height: 19px;
+    }
     .b-rating-dislike-bar .display-rating {
-      display: inline-block;
-      padding: 0 10px;
-      height: 20px;
-      font-size: 0.8rem;
-      line-height: 20px;
+      margin: 0 10px;
+      font-size: 0.6rem;
       vertical-align: text-bottom;
       color: #606B80;
     }
@@ -1004,56 +1217,23 @@ label {
       line-height: 22px;
       color: #1C5BC9;
     }
+      .b-rating-dislike-bar .comments:before {
+        content: '\f0e5';
+        font-family: 'FontAwesome';
+        margin-right: 10px;
+      }
     .b-rating-dislike-bar .view {
       float: right;
       font-size: 0.6rem;
       line-height: 22px;
       margin-left: 40px;
     }
-  /* Комментариев и просмотров  */
-    .b-comments-view {
-      width: 100%;
-      padding: 10px;
-      overflow: auto;
-    }
-      .b-comments-view:after {
-        content: '';
-        clear: both;
+      .b-rating-dislike-bar .view:before {
+        content: '\f087';
+        font-family: 'FontAwesome';
+        margin-right: 10px;
       }
-      .b-comments-view .like {
-        float: right;
-        font-size: 0.6rem;
-        line-height: 22px;
-        margin-right: 40px;
-      }
-        .b-comments-view .like:before {
-          content: '\f087';
-          font-family: 'FontAwesome';
-          margin-right: 10px;
-        }
-      .b-comments-view .view {
-        float: right;
-        font-size: 0.6rem;
-        line-height: 22px;
-        margin-left: 40px;
-      }
-        .b-comments-view .view:before {
-          content: '\f06e';
-          font-family: 'FontAwesome';
-          margin-right: 10px;
-        }
-      .b-comments-view .comments {
-        float: right;
-        font-size: 0.6rem;
-        line-height: 22px;
-        color: #1C5BC9;
-      }
-      .b-comments-view .comments:before {
-          content: '\f0e5';
-          font-family: 'FontAwesome';
-          margin-right: 10px;
-      }
-       
+
   /* Сообщение о подтверждени отправки/опубликования */
       .b-message-confirm {
         position: absolute;
@@ -1063,7 +1243,7 @@ label {
         margin-top: -150px;
         padding: 20px;
         width: 595px;
-        height: 265px;
+        height: 251px;
         background-color: #FFFFFF;
         border-radius: 4px;
         -webkit-box-shadow: 0px 0px 5px rgba(130, 130, 130, 0.2);
@@ -1133,7 +1313,7 @@ main {
     color: #0038A8;
   }
 .b-main-title {
-  margin-top: 26px;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 .title-search.b-main-title {
@@ -1149,7 +1329,7 @@ main {
   -ms-flex-align: center;
   -webkit-box-align: center;
   align-items: center;
-  margin-top: 26px;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
   .title-search.b-main-title h1,
@@ -1529,3 +1709,4 @@ main {
   }
 
 
+}
