--- a/www/css/styles-my-page.css
+++ b/www/css/styles-my-page.css
@@ -110,22 +110,18 @@
     .b-property-string:last-child {
       margin-bottom: 5px;
     }
-      .b-property h6,
-      .b-property h6 + p.text {
+      .b-property p.text {
         position: relative;
         bottom: -5px;
         line-height: 1.42em;
         background-color: #FFFFFF;
       }
-      .b-property h6 {
-        color : #1C5BC9;
-        padding-right: 10px;
-      }
-      .b-property h6 + p.text {
-        font-family: 'Open Sans', sans-serif;
-        font-size: 0.8rem;
-        padding-left: 10px;
-      }
+        .b-property .b-property-string p.text:first-child {
+          padding-right: 5px;
+        }
+        .b-property .b-property-string p.text:last-child {
+          padding-left: 5px;
+        }
 
 .l-logbook {
   
@@ -219,6 +215,10 @@
           .firefox .b-logbook__container-item-text p.text[data-clamp] {
             max-height: 3.1rem;
           }
+        .b-rating-dislike-bar {
+          margin-top: 5px;
+          padding: 5px 10px;
+        }
     .display-all {
       text-align: center;
       color: #1C5BC9;
