--- a/www/css/styles-one-ad.css
+++ b/www/css/styles-one-ad.css
@@ -9,10 +9,6 @@
 .b-one-ad h4 {
   color: #0038A8;
 }
-.b-main-title {
-  margin-top: 26px;
-  margin-bottom: 20px;
-}
 .b-one-ad__main-block {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -109,13 +105,16 @@
     text-align: center;
     color: #0038A8;
   }
+  .b-contact > div {
+    padding-bottom: 40px;
+  }
   .b-contact__saler {
-    margin: 5px 0 40px;
+    padding: 5px 0;
   }
     .b-contact__saler img {
       display: block;
-      height: 140px;
-      width: 140px;
+      height: 110px;
+      width: 110px;
       margin: 0 auto;
       margin-bottom: 20px;
       border-radius: 50%;
@@ -162,12 +161,16 @@
     width: 100%;
     clear: both;
     overflow: auto;
+    margin-bottom: 15px;
   }
-  button + p.text {
-    margin-top: 20px;
-    cursor: pointer;
-    -webkit-transition: color 0.2s ease;
-    transition: color 0.2s ease;
+    .b-contact .button:before {
+      content: '\f0e0';
+      margin: 0 10px 0 5px;
+      font-family: 'FontAwesome';
+      font-size: 0.7rem;
+    }
+  button.button + p {
+    text-align: center;
   }
   .b-contact__other-ad {
     margin-bottom: 20px;
@@ -192,45 +195,4 @@
 }
   .b-one-ad__other h3 {
     margin-bottom: 20px;
-  }
-  .b-ad__item.item {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding-bottom: 20px;
-  }
-  .b-ad__item.item:not(:first-child) {
-    margin-top: 20px;
-  }
-  .b-ad__item.item:not(:last-child) {
-    border-bottom: 1px solid #CECECE;
-  }
-  .b-ad__item-img {
-    -webkit-box-flex: 2;
-    -webkit-flex: 2;
-    -ms-flex: 2;
-    flex: 2;
-  }
-  .b-ad__item-info {
-    -webkit-box-flex: 6;
-    -webkit-flex: 6;
-    -ms-flex: 6;
-    flex: 6;
-    margin-left: 20px;
-
-  }
-    .b-ad__item-info a {
-      font-size: 0.7rem;
-    }
-  .b-ad__item-price {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    text-align: center;
-  }
+  }}
