--- a/www/css/styles-aside-block-author.css
+++ b/www/css/styles-aside-block-author.css
@@ -22,6 +22,19 @@
     color : #1C5BC9;
     text-align: center;
   }
+    .b-author__wrapp-name > span {
+      position: relative;
+      padding-left: 20px;
+    }
+      .b-author__wrapp-name > span:before {
+        position: absolute;
+        left: 0;
+        margin-right: 3px;
+        font-family: 'FontAwesome';
+        font-size: 0.9rem;
+        content: '\f005';
+        color: #EDB867;
+      }
   .b-author__wrapp-city {
     text-align: center;
     margin-bottom: 20px;
@@ -30,6 +43,7 @@
   .b-author__wrapp-message.button {
     font-size: 14px;
     display: inline-block;
+    width: -webkit-calc( ( 100% - 20px ) / 2 );
     width: calc( ( 100% - 20px ) / 2 );
   }
   .b-author__wrapp-follow {
@@ -54,6 +68,7 @@
   .b-author__wrapp-info {
     display: -webkit-flex;
     display: -ms-flexbox;
+    display: -webkit-box;
     display: flex;
     margin: 20px -20px 25px;
   }
@@ -61,6 +76,7 @@
       position: relative;
       -webkit-flex: 1;
       -ms-flex: 1;
+      -webkit-box-flex: 1;
       flex: 1;
       border-top: 1px solid rgba(64,64,64,0.1);
       border-bottom: 1px solid rgba(64,64,64,0.1);
@@ -160,6 +176,7 @@
     -webkit-transform: translate3d(100%, 0, 0);
     transform: translate3d(100%, 0, 0);
     transition: -webkit-transform 0.2s ease;
+    -webkit-transition: -webkit-transform 0.2s ease;
     transition: transform 0.2s ease;
     transition: transform 0.2s ease, -webkit-transform 0.2s ease;
   }
@@ -168,6 +185,7 @@
       transform: translate3d(0, 0, 0);
     }
     .b-author {
+      -webkit-box-shadow: -2px 2px 22px rgba(0,0,0,0.5);
       box-shadow: -2px 2px 22px rgba(0,0,0,0.5);
     }
       #button-author-auto {
@@ -180,11 +198,13 @@
       padding: 20px;
       height: 820px;
       background-color: #FFFFFF;
+      -webkit-box-shadow: -2px 2px 22px rgba(0,0,0,0.5);
       box-shadow: -2px 2px 22px rgba(0,0,0,0.5);
       border-radius: 4px;
       -webkit-transform: translate3d(100%, 0, 0);
       transform: translate3d(100%, 0, 0);
       transition: -webkit-transform 0.2s ease;
+      -webkit-transition: -webkit-transform 0.2s ease;
       transition: transform 0.2s ease;
       transition: transform 0.2s ease, -webkit-transform 0.2s ease;
       z-index: 2;
